# edu_yocta

./: .gignore  .gignore.save  .gitignore  1labaRaspberry  1labaRaspberry.cbp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.autosave  Makefile  MyClass.cpp  MyClass.h  Tsezar.cpp  Tsezar.h  cmake_install.cmake  main.cpp
